LPS-33812 Modified code and added ability to ignore all

--- a/hooks/spellchecker-hook/docroot/META-INF/custom_jsps/html/js/editor/ckeditor/plugins/liferayspellchecker/css/liferay.spellchecker.css
+++ b/hooks/spellchecker-hook/docroot/META-INF/custom_jsps/html/js/editor/ckeditor/plugins/liferayspellchecker/css/liferay.spellchecker.css
@@ -32,7 +32,8 @@
 	border-top: 1px solid #DDD;
 }
 
-.spellchecker-suggestbox .footer .ignore-all, .spellchecker-suggestbox .footer .ignore-forever {
+/*.spellchecker-suggestbox .footer .ignore-all,*/
+.spellchecker-suggestbox .footer .ignore-forever {
 	display: none;
 }
 
